Application-Code/Kubernetes-manifest-files/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: three-tier-application
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3500
    targetPort: 3500
  type: ClusterIP
