Application-Code/Kubernetes-manifest-files/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: three-tier-application
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
