Application-Code/Kubernetes-manifest-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-of-three-tier-application
  namespace: three-tier-application
spec:
  rules:
  - host: app.todo.com
    http:
      paths:
      - pathType: Prefix
        path: /api/tasks
        backend:
          service:
            name: backend
            port:
              number: 3500
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 3000
